# rag-intake

./: .gitignore  README.md  config.yml.example  ingest.py  pyproject.toml  requirements.txt
tests/: test_ingest.py
